Changelog
=========

1.1a1 (unreleased)
------------------

- Added Spanish and Brazilian Portuguese translations
  [hvelarde]

- Move to using plone.app.registry
  [saibatizoku]

- Make work with plone.locking
  [vangheem]

- provide ability to specify the view to traverse to
  in route configuration
  [vangheem]

- do not apply IWrappedContext interface
  [vangheem]


1.0a1 (2011-10-07)
------------------

- Initial release